fix: Aligning elements

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 .card-width {
-  width: 18rem;
+  max-width: 17rem;
 }
 .img-container {
   object-fit: cover;
@@ -21,4 +21,5 @@
 
 .img-fit {
   height: 200px;
+  object-fit: cover;
 }
